k8s/todo-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
  namespace: todo-app
  labels:
    app: todo-service
spec:
  selector:
    app: todo-service
  ports:
  - port: 8002
    targetPort: 8002
    protocol: TCP
  type: ClusterIP
